[package]
name = "geotimezone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
reqwest = "*"
num = "*"
serde = { version = "1.0.102", features = ["derive"] }
actix-web = "4.0.0"
serde_json = "1.0.41"
serde_derive = "1.0.102"
libmath = "0.2.1"
num-derive = "0.2"
num-traits = "0.2"
rustc-serialize = "*"
serde_json_any_key = "*"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2.5", features = ["derive"] }