[package]
name = "geotimezone"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
reqwest = "0.11.13"
num = "0.4.0"
serde = { version = "1.0.157", features = ["derive"] }
serde_derive = "1.0.157"
serde_json = "1.0.94"
actix-web = "4.2.1"
dotenv = "0.15.0"
libmath = "0.2.1"
num-derive = "0.2"
num-traits = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2.5", features = ["derive"] }
http-cache-reqwest = "0.5.0"
reqwest-middleware = "0.1.6"
regex = "1"
diacritics = "0.2.0"
globals = "1"
